src/main/java/Grammatica/myCompiler/grammaticaParser.java
// $ANTLR 3.5.1 C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g 2022-11-01 11:26:28

package Grammatica.myCompiler;

// Inserire le import per vostruttore (vedere @members )

	//SE SI VUOLE UTILIZZARE IL FILE ParserLauncher
	
import Grammatica.myCompiler.util.*;
import Grammatica.myCompiler.GrammaticaHandler;
import java.io.IOException;
import java.io.StringReader;
import java.io.FileReader;
import java.util.HashMap;
import java.util.Map;
import LFCLibrary.TypeConversion.*;





import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class grammaticaParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BACLOSE", "BAOPEN", "COL", "COLON", 
		"COMMA", "COMMENT", "ENDCOL", "ENDCONVERSION", "ENDDELETE", "ENDDOC", 
		"ENDINPATH", "ENDMODIFYINGCELL", "ENDNAMESHEET", "ENDOUTPATH", "ENDROW", 
		"INDEXDELETE", "INT", "NEWNAMESHEET", "NEWVALUE", "ROW", "SCAN_ERROR", 
		"SHEETINDEX", "STARTCOL", "STARTCONVERSION", "STARTDELETE", "STARTDOC", 
		"STARTINPATH", "STARTMODIFYINGCELL", "STARTNAMESHEET", "STARTOUTPATH", 
		"STARTROW", "STRINGA", "WS"
	};
	public static final int EOF=-1;
	public static final int BACLOSE=4;
	public static final int BAOPEN=5;
	public static final int COL=6;
	public static final int COLON=7;
	public static final int COMMA=8;
	public static final int COMMENT=9;
	public static final int ENDCOL=10;
	public static final int ENDCONVERSION=11;
	public static final int ENDDELETE=12;
	public static final int ENDDOC=13;
	public static final int ENDINPATH=14;
	public static final int ENDMODIFYINGCELL=15;
	public static final int ENDNAMESHEET=16;
	public static final int ENDOUTPATH=17;
	public static final int ENDROW=18;
	public static final int INDEXDELETE=19;
	public static final int INT=20;
	public static final int NEWNAMESHEET=21;
	public static final int NEWVALUE=22;
	public static final int ROW=23;
	public static final int SCAN_ERROR=24;
	public static final int SHEETINDEX=25;
	public static final int STARTCOL=26;
	public static final int STARTCONVERSION=27;
	public static final int STARTDELETE=28;
	public static final int STARTDOC=29;
	public static final int STARTINPATH=30;
	public static final int STARTMODIFYINGCELL=31;
	public static final int STARTNAMESHEET=32;
	public static final int STARTOUTPATH=33;
	public static final int STARTROW=34;
	public static final int STRINGA=35;
	public static final int WS=36;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public grammaticaParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public grammaticaParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return grammaticaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g"; }



	// ************************************ inizio Analizzatore semantico

	GrammaticaHandler h;


	// ****************************************** Parte scanner e parser 
		public grammaticaParser(FileReader fileIn, converterExcelToType cET) throws  IOException{
					this(new CommonTokenStream(
									new grammaticaLexer(
											new ANTLRReaderStream(fileIn))));
			
					h = new GrammaticaHandler(input, cET);
				}
				
	public GrammaticaHandler getHandler() {
	    return h;
	  }
	  
				
				
	public List<String> getErrorList () {
	    return h.getErrorList();
	  }
		public void displayRecognitionError(String[] tokenNames,
	                                       RecognitionException e) {
			String hdr = " * " + getErrorHeader(e);
			String msg = " - " + getErrorMessage(e, tokenNames);
			  
			h.handleError(tokenNames, e, hdr, msg);
	  }





	//**





	// $ANTLR start "language"
	// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:80:1: language : STARTDOC wsc body wsc ENDDOC ;
	public final void language() throws RecognitionException {
		try {
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:81:2: ( STARTDOC wsc body wsc ENDDOC )
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:82:3: STARTDOC wsc body wsc ENDDOC
			{
			match(input,STARTDOC,FOLLOW_STARTDOC_in_language62); 
			pushFollow(FOLLOW_wsc_in_language64);
			wsc();
			state._fsp--;

			pushFollow(FOLLOW_body_in_language66);
			body();
			state._fsp--;

			pushFollow(FOLLOW_wsc_in_language68);
			wsc();
			state._fsp--;

			match(input,ENDDOC,FOLLOW_ENDDOC_in_language71); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "language"



	// $ANTLR start "body"
	// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:86:2: body : (i= inpath ) wsc (o= outpath )? wsc (cT= conversion ) wsc (nS= namesheet )? wsc (d= delete )? wsc (cM= modifyingcell )? ;
	public final void body() throws RecognitionException {
		Token i =null;
		ArrayList<Token> o =null;
		ArrayList<Token> cT =null;
		Map<Token, Token> nS =null;
		ArrayList<Delete<Token,Token>> d =null;
		ArrayList<cellModifyingClass<Token,Token,Token,Token>> cM =null;

		try {
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:86:7: ( (i= inpath ) wsc (o= outpath )? wsc (cT= conversion ) wsc (nS= namesheet )? wsc (d= delete )? wsc (cM= modifyingcell )? )
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:87:3: (i= inpath ) wsc (o= outpath )? wsc (cT= conversion ) wsc (nS= namesheet )? wsc (d= delete )? wsc (cM= modifyingcell )?
			{
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:87:3: (i= inpath )
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:87:4: i= inpath
			{
			pushFollow(FOLLOW_inpath_in_body92);
			i=inpath();
			state._fsp--;

			h.setInputPath(i);
			}

			pushFollow(FOLLOW_wsc_in_body98);
			wsc();
			state._fsp--;

			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:89:3: (o= outpath )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==STARTOUTPATH) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:89:4: o= outpath
					{
					pushFollow(FOLLOW_outpath_in_body107);
					o=outpath();
					state._fsp--;

					h.setOuputPath(o);
					}
					break;

			}

			pushFollow(FOLLOW_wsc_in_body114);
			wsc();
			state._fsp--;

			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:91:3: (cT= conversion )
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:91:4: cT= conversion
			{
			pushFollow(FOLLOW_conversion_in_body123);
			cT=conversion();
			state._fsp--;

			 h.setConversionType(cT);
			}

			pushFollow(FOLLOW_wsc_in_body131);
			wsc();
			state._fsp--;

			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:94:3: (nS= namesheet )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==STARTNAMESHEET) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:94:4: nS= namesheet
					{
					pushFollow(FOLLOW_namesheet_in_body142);
					nS=namesheet();
					state._fsp--;

					 h.setSheetName(nS);
					}
					break;

			}

			pushFollow(FOLLOW_wsc_in_body152);
			wsc();
			state._fsp--;

			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:97:3: (d= delete )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==STARTDELETE) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:97:4: d= delete
					{
					pushFollow(FOLLOW_delete_in_body161);
					d=delete();
					state._fsp--;

					h.printDelete(d);
					}
					break;

			}

			pushFollow(FOLLOW_wsc_in_body170);
			wsc();
			state._fsp--;

			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:100:3: (cM= modifyingcell )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==STARTMODIFYINGCELL) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:100:4: cM= modifyingcell
					{
					pushFollow(FOLLOW_modifyingcell_in_body179);
					cM=modifyingcell();
					state._fsp--;

					h.modifyingCellMeth(cM);
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "body"



	// $ANTLR start "wsc"
	// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:104:1: wsc : ( WS | COMMENT | scanerror )* ;
	public final void wsc() throws RecognitionException {
		try {
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:104:5: ( ( WS | COMMENT | scanerror )* )
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:105:2: ( WS | COMMENT | scanerror )*
			{
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:105:2: ( WS | COMMENT | scanerror )*
			loop5:
			while (true) {
				int alt5=4;
				switch ( input.LA(1) ) {
				case WS:
					{
					alt5=1;
					}
					break;
				case COMMENT:
					{
					alt5=2;
					}
					break;
				case SCAN_ERROR:
					{
					alt5=3;
					}
					break;
				}
				switch (alt5) {
				case 1 :
					// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:105:3: WS
					{
					match(input,WS,FOLLOW_WS_in_wsc198); 
					}
					break;
				case 2 :
					// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:105:8: COMMENT
					{
					match(input,COMMENT,FOLLOW_COMMENT_in_wsc202); 
					}
					break;
				case 3 :
					// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:105:17: scanerror
					{
					pushFollow(FOLLOW_scanerror_in_wsc205);
					scanerror();
					state._fsp--;

					}
					break;

				default :
					break loop5;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "wsc"



	// $ANTLR start "inpath"
	// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:115:1: inpath returns [Token p] : STARTINPATH (x= path ) ENDINPATH wsc ;
	public final Token inpath() throws RecognitionException {
		Token p = null;


		Token x =null;

		try {
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:116:2: ( STARTINPATH (x= path ) ENDINPATH wsc )
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:118:3: STARTINPATH (x= path ) ENDINPATH wsc
			{
			match(input,STARTINPATH,FOLLOW_STARTINPATH_in_inpath230); 
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:118:15: (x= path )
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:118:16: x= path
			{
			pushFollow(FOLLOW_path_in_inpath235);
			x=path();
			state._fsp--;

			p=x;
			}

			match(input,ENDINPATH,FOLLOW_ENDINPATH_in_inpath240); 
			pushFollow(FOLLOW_wsc_in_inpath244);
			wsc();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "inpath"



	// $ANTLR start "path"
	// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:122:1: path returns [Token p] : wsc BAOPEN (x= STRINGA ) BACLOSE wsc ;
	public final Token path() throws RecognitionException {
		Token p = null;


		Token x=null;

		try {
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:123:2: ( wsc BAOPEN (x= STRINGA ) BACLOSE wsc )
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:125:2: wsc BAOPEN (x= STRINGA ) BACLOSE wsc
			{
			pushFollow(FOLLOW_wsc_in_path266);
			wsc();
			state._fsp--;

			match(input,BAOPEN,FOLLOW_BAOPEN_in_path268); 
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:125:13: (x= STRINGA )
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:125:14: x= STRINGA
			{
			x=(Token)match(input,STRINGA,FOLLOW_STRINGA_in_path275); 
			p = x;
			}

			match(input,BACLOSE,FOLLOW_BACLOSE_in_path281); 
			pushFollow(FOLLOW_wsc_in_path284);
			wsc();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "path"



	// $ANTLR start "outpath"
	// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:132:1: outpath returns [ArrayList<Token> p] : STARTOUTPATH (x= path )+ ENDOUTPATH ;
	public final ArrayList<Token> outpath() throws RecognitionException {
		ArrayList<Token> p = null;


		Token x =null;

		 p = new ArrayList<Token>();
		try {
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:135:2: ( STARTOUTPATH (x= path )+ ENDOUTPATH )
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:137:2: STARTOUTPATH (x= path )+ ENDOUTPATH
			{
			match(input,STARTOUTPATH,FOLLOW_STARTOUTPATH_in_outpath317); 
			// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:137:15: (x= path )+
			int cnt6=0;
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==BAOPEN||LA6_0==COMMENT||LA6_0==SCAN_ERROR||LA6_0==WS) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:137:16: x= path
					{
					pushFollow(FOLLOW_path_in_outpath322);
					x=path();
					state._fsp--;

					 p.add(x);
					}
					break;

				default :
					if ( cnt6 >= 1 ) break loop6;
					EarlyExitException eee = new EarlyExitException(6, input);
					throw eee;
				}
				cnt6++;
			}

			match(input,ENDOUTPATH,FOLLOW_ENDOUTPATH_in_outpath328); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "outpath"



	// $ANTLR start "conversion"
	// C:\\Users\\user\\Desktop\\Università\\Linguaggi_Progetto_17_10\\Linguaggi_Progetto_17_10\\src\\main\\java\\Grammatica\\myCompiler\\grammatica.g:141:1: conversion returns [ArrayList<Token> cT] : STARTCONVERSION wsc (cType= type ) wsc ENDCONVERSION ;
	public final ArrayList<Token> conversion() throws RecognitionException {
		ArrayList<Token> cT = null;


		ArrayList<Token> cType =null;
